@@ -1,6 +1,18 @@
 Changes and Bugs fixed during the different Releases
 ====================================================
 
+Release 3.x (not scheduled yet)
+================================
+* Bug fixes on OCL Parser/Editor
+  - Parsing of recursively defined properties is now supported.
+
+* Bug fixes on OCL Interpreter
+  - Interpretation of recursively defined properties is now supported.
+  
+* Changes on OCL2SQL
+  - Closure iterator is now supported.
+
+
 Release 3.1 (January, 17th 2011)
 ================================
 
